# library

./: .gitignore  CMakeLists.txt
inc/: sum.hpp
src/: sum.cpp
test/: CMakeLists.txt  test_sum.cpp
